<resources>
    <string name="app_name">SwissManager</string>

    // Necessary constants for the Drawer
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    // Activity titles
    <string name="title_activity_new_player">Add new players</string>
    <string name="title_activity_tourney">Tourney</string>
    <string name="title_activity_round_number">Round %1$s</string>
    <string name="title_activity_round">RoundActivity</string>
    <string name="title_activity_player_data">PlayerDataActivity</string>

    // Title of contextual action bar in Action Mode
    <string name="selected_count">%1$s</string>

    // Sliding tab strings
    <string name="tab_player">Player</string>
    <string name="tab_round">Round</string>
    <string-array name="tabs">
        <item>@string/tab_player</item>
        <item>@string/tab_round</item>
    </string-array>

    // Text an empty lists of tabs
    <string name="empty_players_list">No players</string>
    <string name="empty_rounds_list">No rounds</string>

    // Action name
    <string name="action_settings">Settings</string>
    <string name="action_start_round">Start round</string>
    <string name="action_end_round">End round</string>
    <string name="action_remove">Remove</string>
    <string name="action_create_new_round">New round</string>
    <string name="action_total_round_number">Total round number</string>
    <string name="action_define_winner">Define winner</string>
    <string name="action_sort_by_prestige">Sort by prestige</string>

    // Spinner choices
    <string-array name="match_outcomes">
        <item>Lose</item>
        <item>Win</item>
        <item>Draw</item>
    </string-array>

    // Button text
    <string name="btn_send_match_result">send</string>

    // Toast messages
    <string name="result_ok">OK</string>
    <string name="result_invalid">Invalid match result</string>
    <string name="result_round_added">Round added</string>
    <string name="result_round_started">Round started</string>
    <string name="result_warning_round_started">You should end up the round before starts the new one</string>
    <string name="result_round_ended">Round ended</string>
    <string name="result_warning_round_ended">You should start the round</string>
    <string name="result_cant_start_new_round">Can\'t start new round. Some rounds may running or rounds number is over</string>
    <string name="result_total_rounds_number">"The total number of rounds is "</string>

    // Preferences keys
    <string name="pref_key_point_win">pref_key_point_win</string>
    <string name="pref_key_point_lose">pref_key_point_lose</string>
    <string name="pref_key_point_draw">pref_key_point_draw</string>
    <string name="pref_key_point_bye">pref_key_point_bye</string>

</resources>
